--- a/SampleApp2/SampleApp2/Base.lproj/Main.storyboard
+++ b/SampleApp2/SampleApp2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YuJ-tW-fIz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lfj-hy-8gy">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -313,6 +313,57 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4oD-Bd-vjp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="420" y="2167.2413793103451"/>
+        </scene>
+        <!--View Controller3-->
+        <scene sceneID="fh7-UB-fav">
+            <objects>
+                <viewController id="lfj-hy-8gy" customClass="ViewController3" customModule="SampleApp2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8jZ-hU-LVC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LGq-3N-8uU">
+                                <rect key="frame" x="16" y="44" width="343" height="343"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swift" translatesAutoresizingMaskIntoConstraints="NO" id="dQm-OW-wEi">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="343"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swift" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1jj-kr-vZv">
+                                        <rect key="frame" x="0.0" y="313" width="343" height="30"/>
+                                        <color key="backgroundColor" red="0.2239509351325758" green="0.2239509351325758" blue="0.2239509351325758" alpha="0.75" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="V9h-oe-MSA"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="1jj-kr-vZv" secondAttribute="bottom" id="1Ps-hi-siM"/>
+                                    <constraint firstAttribute="width" secondItem="LGq-3N-8uU" secondAttribute="height" multiplier="1:1" id="CoW-PD-Lt8"/>
+                                    <constraint firstAttribute="trailing" secondItem="dQm-OW-wEi" secondAttribute="trailing" id="DQU-XM-jhI"/>
+                                    <constraint firstItem="dQm-OW-wEi" firstAttribute="leading" secondItem="LGq-3N-8uU" secondAttribute="leading" id="RmX-a6-w4d"/>
+                                    <constraint firstItem="dQm-OW-wEi" firstAttribute="top" secondItem="LGq-3N-8uU" secondAttribute="top" id="alM-w6-hOF"/>
+                                    <constraint firstAttribute="trailing" secondItem="1jj-kr-vZv" secondAttribute="trailing" id="eYl-g6-LSt"/>
+                                    <constraint firstAttribute="bottom" secondItem="dQm-OW-wEi" secondAttribute="bottom" id="qrU-8K-KVU"/>
+                                    <constraint firstItem="1jj-kr-vZv" firstAttribute="leading" secondItem="LGq-3N-8uU" secondAttribute="leading" id="zqC-6h-hje"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="d5U-5g-FKA"/>
+                        <color key="backgroundColor" systemColor="systemYellowColor"/>
+                        <constraints>
+                            <constraint firstItem="LGq-3N-8uU" firstAttribute="leading" secondItem="d5U-5g-FKA" secondAttribute="leading" constant="16" id="Tez-1E-q8n"/>
+                            <constraint firstItem="d5U-5g-FKA" firstAttribute="trailing" secondItem="LGq-3N-8uU" secondAttribute="trailing" constant="16" id="dcD-p7-Zrc"/>
+                            <constraint firstItem="LGq-3N-8uU" firstAttribute="top" secondItem="d5U-5g-FKA" secondAttribute="top" id="mHu-MW-4hv"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dTy-44-a0U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="420" y="2836.6995073891626"/>
         </scene>
         <!--View Controller2-->
         <scene sceneID="aur-hO-gDS">
