--- a/SampleApp2/SampleApp2/Base.lproj/Main.storyboard
+++ b/SampleApp2/SampleApp2/Base.lproj/Main.storyboard
@@ -351,6 +351,11 @@
                                     <constraint firstItem="1jj-kr-vZv" firstAttribute="leading" secondItem="LGq-3N-8uU" secondAttribute="leading" id="zqC-6h-hje"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZyN-EN-gP4" customClass="CaptionImageView" customModule="SampleApp2" customModuleProvider="target">
+                                <rect key="frame" x="47" y="450" width="283" height="275"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="d5U-5g-FKA"/>
                         <color key="backgroundColor" systemColor="systemYellowColor"/>
@@ -363,7 +368,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dTy-44-a0U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="420" y="2836.6995073891626"/>
+            <point key="canvasLocation" x="-154" y="2822"/>
         </scene>
         <!--View Controller2-->
         <scene sceneID="aur-hO-gDS">
