--- a/SampleApp2/SampleApp2/CaptionImageView.xib
+++ b/SampleApp2/SampleApp2/CaptionImageView.xib
@@ -20,7 +20,7 @@
             <rect key="frame" x="0.0" y="0.0" width="359" height="374"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tvV-Nq-1fc">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="typescript" translatesAutoresizingMaskIntoConstraints="NO" id="tvV-Nq-1fc">
                     <rect key="frame" x="0.0" y="0.0" width="359" height="374"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ugb-RR-dkf">
@@ -51,6 +51,7 @@
         </view>
     </objects>
     <resources>
+        <image name="typescript" width="250" height="250"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
