--- a/SampleApp2/SampleApp2/Base.lproj/Main.storyboard
+++ b/SampleApp2/SampleApp2/Base.lproj/Main.storyboard
@@ -355,6 +355,10 @@
                                 <rect key="frame" x="47" y="450" width="283" height="275"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="caption" value="Hello"/>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="image" value="kotlin2"/>
+                                </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="d5U-5g-FKA"/>
