--- a/SampleApp2/SampleApp2/CaptionImageView.xib
+++ b/SampleApp2/SampleApp2/CaptionImageView.xib
@@ -22,6 +22,7 @@
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="typescript" translatesAutoresizingMaskIntoConstraints="NO" id="tvV-Nq-1fc">
                     <rect key="frame" x="0.0" y="0.0" width="359" height="374"/>
+                    <gestureRecognizers/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ugb-RR-dkf">
                     <rect key="frame" x="0.0" y="334" width="359" height="40"/>
@@ -35,6 +36,7 @@
                 </label>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <gestureRecognizers/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="Ugb-RR-dkf" secondAttribute="bottom" id="0P3-lz-VSu"/>
                 <constraint firstItem="tvV-Nq-1fc" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="B6l-4F-VEg"/>
@@ -47,8 +49,16 @@
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outletCollection property="gestureRecognizers" destination="7MH-fr-ibF" appends="YES" id="BKj-fx-0aI"/>
+            </connections>
             <point key="canvasLocation" x="-536" y="20"/>
         </view>
+        <tapGestureRecognizer id="7MH-fr-ibF">
+            <connections>
+                <action selector="onTap:" destination="-1" id="HvN-Do-IdI"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
     <resources>
         <image name="typescript" width="250" height="250"/>
