--- a/SampleApp3/SampleApp3/FirstController.xib
+++ b/SampleApp3/SampleApp3/FirstController.xib
@@ -29,6 +29,12 @@
                         <action selector="onTapOpenButton:" destination="-1" eventType="touchUpInside" id="TaU-wd-5Dt"/>
                     </connections>
                 </button>
+                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kPb-gW-PfC">
+                    <rect key="frame" x="84" y="462" width="206" height="57"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
