--- a/SampleApp3/SampleApp3/FirstController.xib
+++ b/SampleApp3/SampleApp3/FirstController.xib
@@ -13,6 +13,7 @@
             <connections>
                 <outlet property="childView" destination="aQD-wB-QCd" id="KYp-pa-J8S"/>
                 <outlet property="textField" destination="kPb-gW-PfC" id="kDK-tO-l5Q"/>
+                <outlet property="textFieldBottomMargin" destination="qGp-Ji-ZSL" id="0BE-qX-ZP0"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,7 +23,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KCe-sB-nr9">
-                    <rect key="frame" x="112" y="630" width="151" height="116"/>
+                    <rect key="frame" x="112" y="88" width="151" height="116"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="40"/>
                     <state key="normal" title="Open"/>
@@ -30,15 +31,22 @@
                         <action selector="onTapOpenButton:" destination="-1" eventType="touchUpInside" id="TaU-wd-5Dt"/>
                     </connections>
                 </button>
-                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kPb-gW-PfC">
-                    <rect key="frame" x="84" y="462" width="206" height="57"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kPb-gW-PfC">
+                    <rect key="frame" x="16" y="570" width="343" height="48"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="48" id="Mhx-hY-Ykh"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="kPb-gW-PfC" secondAttribute="bottom" constant="160" id="qGp-Ji-ZSL"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="kPb-gW-PfC" secondAttribute="trailing" constant="16" id="qlz-eg-PuB"/>
+                <constraint firstItem="kPb-gW-PfC" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="t0g-AS-5VO"/>
+            </constraints>
             <point key="canvasLocation" x="138.40000000000001" y="109.35960591133005"/>
         </view>
         <view contentMode="scaleToFill" id="aQD-wB-QCd">
