--- a/SampleApp2/SampleApp2/Base.lproj/Main.storyboard
+++ b/SampleApp2/SampleApp2/Base.lproj/Main.storyboard
@@ -140,7 +140,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qvi-7g-A9e" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-402.39999999999998" y="825.3694581280788"/>
+            <point key="canvasLocation" x="-561" y="825"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Zm8-tk-EjU">
@@ -498,6 +498,55 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SPL-i8-Ep2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="420" y="825"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Jr1-Wa-cRY">
+            <objects>
+                <viewController id="90E-eK-NaY" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iE8-UB-aBA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L9X-Ig-UsN">
+                                <rect key="frame" x="138" y="244" width="99" height="30"/>
+                                <state key="normal" title="123123123123"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WDe-L6-PkD">
+                                <rect key="frame" x="138" y="375" width="99" height="30"/>
+                                <state key="normal" title="2312"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="agm-eQ-ZbV">
+                                <rect key="frame" x="123.66666666666669" y="488" width="128" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="128" id="OmT-pb-tVc"/>
+                                </constraints>
+                                <state key="normal" title="123981723891273"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Evx-gr-O7d">
+                                <rect key="frame" x="123.66666666666669" y="619" width="128" height="30"/>
+                                <state key="normal" title="8917238917238919283789127398712893"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="QB3-6a-EWp"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="L9X-Ig-UsN" firstAttribute="centerX" secondItem="QB3-6a-EWp" secondAttribute="centerX" id="0Ft-BZ-9K0"/>
+                            <constraint firstItem="Evx-gr-O7d" firstAttribute="leading" secondItem="agm-eQ-ZbV" secondAttribute="leading" id="9ql-ht-YS5"/>
+                            <constraint firstItem="WDe-L6-PkD" firstAttribute="width" secondItem="L9X-Ig-UsN" secondAttribute="width" id="D6h-Yf-XXZ"/>
+                            <constraint firstItem="Evx-gr-O7d" firstAttribute="top" secondItem="agm-eQ-ZbV" secondAttribute="bottom" constant="101" id="EWU-Ke-mel"/>
+                            <constraint firstItem="WDe-L6-PkD" firstAttribute="top" secondItem="L9X-Ig-UsN" secondAttribute="bottom" constant="101" id="IY1-Ca-Wij"/>
+                            <constraint firstItem="Evx-gr-O7d" firstAttribute="centerX" secondItem="agm-eQ-ZbV" secondAttribute="centerX" id="NjW-0N-0d1"/>
+                            <constraint firstItem="Evx-gr-O7d" firstAttribute="trailing" secondItem="agm-eQ-ZbV" secondAttribute="trailing" id="QeC-nx-eH2"/>
+                            <constraint firstItem="agm-eQ-ZbV" firstAttribute="centerX" secondItem="QB3-6a-EWp" secondAttribute="centerX" id="ejc-Pn-jsw"/>
+                            <constraint firstItem="agm-eQ-ZbV" firstAttribute="top" secondItem="WDe-L6-PkD" secondAttribute="bottom" constant="83" id="nyB-Pr-yNb"/>
+                            <constraint firstItem="L9X-Ig-UsN" firstAttribute="top" secondItem="QB3-6a-EWp" secondAttribute="top" constant="200" id="vb1-09-yh5"/>
+                            <constraint firstItem="WDe-L6-PkD" firstAttribute="centerX" secondItem="L9X-Ig-UsN" secondAttribute="centerX" id="yIx-nQ-Oac"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sES-tH-ULq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1221.5999999999999" y="824.6305418719212"/>
         </scene>
     </scenes>
     <resources>
