--- a/SampleApp3/SampleApp3/FirstController2.xib
+++ b/SampleApp3/SampleApp3/FirstController2.xib
@@ -27,6 +27,16 @@
                         <action selector="onTapOpenButton:" destination="-1" eventType="touchUpInside" id="1M5-pW-dra"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SCD-dU-rDi">
+                    <rect key="frame" x="85" y="493" width="204" height="126"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="Button">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="onTouch:" destination="-1" eventType="touchUpInside" id="4Tn-aa-7Zc"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemIndigoColor"/>
